--- a/site/src/styles/prismjs.css
+++ b/site/src/styles/prismjs.css
@@ -83,6 +83,10 @@ http://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascr
   --aqua: #4ccacd;
 }
 
+pre {
+  overflow: auto;
+}
+
 pre::-webkit-scrollbar {
   width: 14px;
 }
